cse/bnpp/private-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: private-gateway
  namespace: opentoolchain
spec:
  selector:
    istio: custom-ingressgateway-private
  servers:
  - hosts:
    - '*.private.eu-fr2.devops.cloud.ibm.com'
    port:
      name: https_eu-fr2.devops.cloud.ibm.com
      number: 443
      protocol: HTTPS
    tls:
      credentialName: star.eu-fr2.devops.cloud.ibm.com
      mode: SIMPLE
