cse/bnpp/private-worker-service-private-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
    ingress.bluemix.net/ALB-ID: "private-crbsrbe45b0ild86a5so80-alb1;private-crbsrbg8fb0r1ubcp66n4g-alb1;private-crbsrbhhrb0tkhgcp66n50-alb1"
  labels:
    app: private-worker-service
    release: private-worker-service
  name: private-worker-service-private-ingress
  namespace: opentoolchain
spec:
  rules:
    - host: private-worker-service.private.eu-fr2.devops.cloud.ibm.com
      http:
        paths:
          - backend:
              serviceName: private-worker-service
              servicePort: 80
  tls:
    - hosts:
        - private-worker-service.private.eu-fr2.devops.cloud.ibm.com
      secretName: star.eu-fr2.devops.cloud.ibm.com
